--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "moment": "^2.12.0",
     "mousetrap": "^1.4.10",
     "ngAutocomplete": "^1.0.0",
+    "ng-range-slider": "^0.2.0",
     "twemoji": "^2.0.5"
   }
 }
